# paaws-benchmarking

./: .gitignore  README.md  compute_features.py  get_and_clean_data.py  make_predictions.py  pyproject.toml  requirements.txt  run_experiment.py  train_eval_model.py  utils.py
data/: README.md
data/PAAWS_SimFL_Lab/DS_10/label/: DS_10-Lab-label.csv
data/PAAWS_SimFL_Lab/DS_36/label/: DS_36-Lab-label.csv
data/feature_data/DS_10/accel/: DS_10_LeftWristTop_Features.csv
data/feature_data/DS_10/label/: DS_10_Clean_Labels.csv
data/feature_data/DS_36/accel/: DS_36_LeftWristTop_Features.csv
data/feature_data/DS_36/label/: DS_36_Clean_Labels.csv
misc_scripts/: read_accelerometer_data.py  rotate_sensors.py
models/: README.md
replicate_our_results/: README.md  replicate_4.2.1_simfl_jobs.txt  replicate_4.2.2_fl_jobs.txt
results/: README.md
